--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,10 @@ Standards:
     ContentFiles:
       -
         Type: Lesson
+        UID: 348dbcad-93f3-49e3-8aeb-f314c91096ad
+        Path: /01-js-week-1/welcome-to-second-language.md
+      -
+        Type: Lesson
         UID: 6417cc03-a1be-4e53-9886-ca4559062e3c
         Path: /01-js-week-1/setup-linting.md
       -
